# Object-Tracking-with-YOLACT

./: README.md  package.xml
mot/: CMakeLists.txt
mot/src/: object_track_ROS.py
yolact_ROS/: CMakeLists.txt  package.xml
yolact_ROS/msg/: Segment_centers.msg  obj_tracking.msg
yolact_ROS/src/: eval_ROS.py
